# market-lab

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLOUD_MIGRATION_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_ROADMAP_PHASES_1_6.md  LICENSE  PLAN.md  Phase2-results.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  tox.ini
.codex/skills/marketlab-critic/: SKILL.md
.codex/skills/marketlab-critic/agents/: openai.yaml
.codex/skills/marketlab-financial-expert/: SKILL.md
.codex/skills/marketlab-financial-expert/agents/: openai.yaml
.codex/skills/marketlab-orchestrator/: SKILL.md
.codex/skills/marketlab-orchestrator/agents/: openai.yaml
.codex/skills/marketlab-pre-commit-checks/: SKILL.md
.codex/skills/marketlab-pre-commit-checks/agents/: openai.yaml
.codex/skills/marketlab-pre-commit-checks/references/: workflow.md
.codex/skills/marketlab-qa/: SKILL.md
.codex/skills/marketlab-qa/agents/: openai.yaml
.codex/skills/marketlab-shared-context/: SKILL.md
.codex/skills/marketlab-shared-context/agents/: openai.yaml
.codex/skills/marketlab-shared-context/references/: data-contracts.md  domain-rules.md  guardrails.md  mvp.md  sprint-map.md  tooling.md
.codex/skills/marketlab-worker/: SKILL.md
.codex/skills/marketlab-worker/agents/: openai.yaml
.github/: FUNDING.yml  pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/issue-seeds/: phase6-mcp.json  phase7-voo-paper.json
.github/workflows/: ci.yml  docker-runner.yml  release.yml
configs/: experiment.phase5.allocation_group.yaml  experiment.phase5.black_litterman.yaml  experiment.qqq_paper_daily.yaml  experiment.voo_long_only.ytd.yaml  experiment.voo_paper_daily.yaml  experiment.weekly_rank.smoke.yaml  experiment.weekly_rank.yaml
docker/: compose.mcp.yml  compose.paper.yml
docs/: PLAN.md  architecture.md  codex-mcp.md  codex.config.toml.example  how-it-works.md  index.md  mcp-server.md  mcp-vscode-copilot.md  paper-trading.md  phase2-results.md  phase5-scenarios.md  plan.md  solid-architecture-audit.md
docs/javascripts/: mermaid-init.js
scripts/: check_mcp_docker.py  check_package.py  profile_validation.py  run-e2e.ps1  run-paper-launch-checks.ps1  run_marketlab.py  run_marketlab_mcp.py
src/marketlab/: __init__.py  _version.py  cli.py  config.py  env.py  pipeline.py  rebalance.py
src/marketlab/backtest/: engine.py  metrics.py
src/marketlab/data/: __init__.py  market.py  panel.py
src/marketlab/evaluation/: __init__.py  walk_forward.py
src/marketlab/features/: engineering.py
src/marketlab/mcp/: __init__.py  cli.py  jobs.py  server.py  tools_admin.py  tools_artifacts.py  tools_configs.py  tools_jobs.py  tools_paper.py  workspace.py
src/marketlab/models/: __init__.py  evaluation.py  registry.py  training.py
src/marketlab/paper/: __init__.py  agent.py  alpaca.py  contracts.py  core.py  notifications.py  report.py  scheduler.py  service.py  state.py
src/marketlab/paper/application/: __init__.py  approval.py  decision.py  reconciliation.py  submission.py
src/marketlab/reports/: analytics.py  markdown.py  plots.py  risk_diagnostics.py  summary.py
src/marketlab/resources/: __init__.py  templates.py
src/marketlab/resources/config_templates/: __init__.py  (+7 more)
src/marketlab/strategies/: __init__.py  allocation.py  buy_hold.py  optimized.py  ranking.py  sma.py
src/marketlab/targets/: __init__.py  timing.py  weekly.py
tests/: _paper_fakes.py  _telegram_fakes.py
tests/fixtures/: market_panel.csv
tests/integration/: _cli_harness.py  test_benchmark_reporting.py  test_cost_sensitivity.py  test_exposure_reporting.py  test_local_launcher.py  test_mcp_server.py  test_optimized_scaffold.py  test_paper_notification_flow.py  test_prepare_data_cli.py  test_real_data_smoke.py  test_real_telegram_smoke.py  test_run_experiment.py  test_train_models.py
tests/unit/: test_analytics.py  test_backtest.py  test_cli.py  test_config.py  test_features.py  test_markdown_report.py  test_mcp_artifacts.py  test_mcp_codex_config.py  test_mcp_jobs.py  test_mcp_server.py  test_mcp_vscode_config.py  test_mcp_workspace.py  test_model_calibration.py  test_model_evaluation.py  test_models.py  test_optimized.py  test_package_resources.py  test_panel.py  test_paper_agent.py  test_paper_alpaca.py  test_paper_application_services.py  test_paper_compose.py  test_paper_contracts.py  test_paper_notifications.py  test_paper_report.py  test_paper_scheduler.py  test_paper_service.py  test_phase7_issue_seed.py  test_profile_validation.py  test_ranking.py  test_report_summaries.py  test_risk_diagnostics.py  test_scenario_configs.py  test_strategies.py  test_targets.py  test_walk_forward.py
